--- a/BE/package.json
+++ b/BE/package.json
@@ -21,8 +21,9 @@
     "mongoose": "^6.3.0",
     "mongoose-paginate-v2": "^1.6.3",
     "nanoid": "^3.3.4",
+    "node": "^17.7.2",
     "nodemailer": "^6.7.3",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.16",
     "otp-generator": "^4.0.0",
     "path": "^0.12.7"
   }
