--- a/BE/.env
+++ b/BE/.env
@@ -1,8 +1,8 @@
 PORT=3000
 MONGO_URI=mongodb://localhost:27017/tcat-company
 JWT_SECRET=12345
-EMAIL=lthgiao.gdsciu@gmail.com
-PASSWORD=huynhgiao6105
+EMAIL=tcat2121@outlook.com
+PASSWORD=2121997khai
 TOKEN_EXPIRED=60
 OTP_EXPIRED=120
 FRONT_END_URL=http://127.0.0.1
